# roboeval

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LIBERO-infinity  Complete NeurIPS 2026 Experiment Plan.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY.md  pyproject.toml  run.py  run_sim_eval.py  run_utils.py  world_stubs.py
.github/: release.yml
.github/workflows/: ci.yml  publish.yml
configs/: aloha_gym_act_liten_smoke.yaml  aloha_gym_act_smoke.yaml  bridge_octo_smoke.yaml  gym_pusht_diffusion_policy_smoke.yaml  gym_pusht_vqbet_smoke.yaml  libero_infinity_gb10_queue.example.yaml  libero_infinity_pi05_full_perturb_smoke.yaml  libero_infinity_pi05_liten_smoke.yaml  libero_infinity_pi05_multi_axis_perturb_smoke.yaml  libero_infinity_pi05_position_perturb_smoke.yaml  libero_infinity_pi05_smoke.yaml  libero_infinity_skip_indices_seed42.yaml  libero_infinity_task8_skip_init_states.yaml  libero_object_smolvla_liten_smoke.yaml  libero_object_smolvla_smoke.yaml  libero_pro_pi05_liten_smoke.yaml  libero_pro_pi05_smoke.yaml  libero_spatial_groot_liten_smoke.yaml  libero_spatial_groot_smoke.yaml  libero_spatial_openvla_liten_smoke.yaml  libero_spatial_openvla_smoke.yaml  libero_spatial_pi05_liten_smoke.yaml  libero_spatial_pi05_smoke.yaml  metaworld_tdmpc2_smoke.yaml  neurips2026_exp4_language_counterfactual_pilot.yaml  robotwin_internvla_liten_smoke.yaml  robotwin_internvla_smoke.yaml
configs/ci/: aloha_gym_internvla_smoke.yaml  gym_pusht_vqbet_smoke.yaml  libero_spatial_groot_smoke.yaml  metaworld_tdmpc2_smoke.yaml  pi05_libero_spatial_smoke.yaml  smolvla_libero_object_smoke.yaml
docker/: proxy.Dockerfile  sim-libero.Dockerfile  sim-robocasa.Dockerfile  sim-robotwin.Dockerfile  vla-cosmos.Dockerfile  vla-groot.Dockerfile  vla-internvla.Dockerfile  vla-lerobot.Dockerfile  vla-openvla.Dockerfile
docs/: adding_a_benchmark.md  adding_a_vla.md  architecture.md  benchmark_results.md  design.md  docker.md  extending.md  failure_modes.md  gb10_libero_infinity_scheduling.md  install.md  libero_infinity.md  liten.md  postfix_rerun_patches.md  quickstart.md  recurring_issues_rca.md  related_work.md  sharded_runs.md  supported_pairs.md  tuning.md  v1_publish_audit.md  vla_policy_architecture.md
docs/rfcs/: 0001-process-isolation.md  0002-actionobsspec-contract.md  0003-hierarchical-evaluation-integration.md  index.md
examples/: README.md  demo_recording.sh  eval.yaml  new_sim_template.py  new_vla_template.py
ica/: reasoning_ica.py
robo_eval/: __init__.py  __main__.py  cli.py  config.py  docker_backend.py  episode_logger.py  orchestrator.py  port_allocator.py  preflight.py  proxy.py  registry.py  results.py  rotation.py  runner.py  server_runner.py  servers.py  specs.py  stack.py  vla_manager.py
robo_eval/cli/: __init__.py  main.py
robo_eval/results/: __init__.py  collector.py  merge.py
roboeval/: __init__.py  __main__.py  config.py  episode_logger.py  orchestrator.py  preflight.py  registry.py  rotation.py  run.py  run_sim_eval.py  run_utils.py  server_runner.py  specs.py  world_stubs.py
roboeval/cli/: __init__.py  main.py
roboeval/results/: __init__.py  collector.py  merge.py  stats.py
scripts/: __init__.py  gb10_mem_probe.py  neurips_results_report.py  release.sh  run_libero_infinity_gb10_queue.py  run_openvla_native_eval.py  run_parallel_p1p2.sh  run_sharded_v2.sh  setup.sh  setup_envs.sh  setup_vla.sh  start_cosmos_policy.sh  start_groot_policy.sh  start_internvla_policy.sh  start_libero_pro_sim.sh  start_openvla_policy.sh  start_pi05_policy.sh  start_sim.sh  start_smolvla_policy.sh  start_tdmpc2_policy.sh  start_vlm.sh  start_vqbet_policy.sh
sims/: __init__.py  env_wrapper.py  litellm_vlm.py  sim_worker.py
sims/vla_policies/: VLA_PREPROCESSING_AUDIT.md  __init__.py  _te_stub.py  act_policy.py  base.py  cosmos_policy.py  diffusion_policy_policy.py  groot_policy.py  internvla_policy.py  octo_policy.py  openvla_batched_server.py  openvla_policy.py  openvla_sglang_server.py  orchestrator.py  pi05_policy.py  smolvla_policy.py  tdmpc2_policy.py  template_policy.py  test_batched_server.py  vla_schema.py  vqbet_policy.py
tests/: conftest.py  test_act_backend.py  test_action_space_discovery.py  test_aloha_gym_backend.py  test_cli.py  test_cli_critical.py  test_config.py  test_debug_window.py  test_diffusion_policy_backend.py  test_docker_backend.py  test_episode_logger.py  test_failure_modes.py  test_groot_gripper.py  test_gym_pusht_backend.py  test_image_flip.py  test_libero_infinity_setup.py  test_maniskill2_backend.py  test_metaworld_backend.py  test_octo_backend.py  test_orchestrator.py  test_parallel_sim_workers.py  test_parity_fixes.py  test_port_allocator.py  test_port_allocator_extended.py  test_postfix_rerun_patches.py  test_preflight.py  test_proxy.py  test_results.py  test_results_new.py  test_results_stats.py  test_robosuite_signature_fix.py  test_rotation.py  test_runner.py  test_server_runner.py  test_sim_wrapper.py  test_spec_contract.py  test_spec_handshake.py  test_specs.py  test_tdmpc2_backend.py  test_translate_action.py  (+1 more)
vlm_hl/: vlm_methods.py  vlm_utils.py
vlm_hl/prompts/assessment/: critique_failure_from_images.txt  critique_failure_from_video.txt  critique_hl_failure_scene.txt  describe_hl_success_scene.txt  describe_success_scene.txt  determine_success_from_images.txt  pizerofive_droid_vla_model_card.txt  reason_about_failure.txt  reflexion_feedback.txt
vlm_hl/prompts/plan_reasoning/: ablation_examples_card.txt  droid_specific_instruction_space.txt  evaluate_mc_question.txt  evaluate_open_question.txt  evaluate_tf_question.txt  format_task.txt  generate_program_with_context.txt  generate_uids.txt  icl_baseline_examples_card.txt  pizerofive_droid_instruction_space.txt  planner_examples_card.txt  reflexion_examples_card.txt  who_ablation_examples_card.txt
